[package]
name = "friendly-jigsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlFormElement", "FormData"]}
websocket = "0.26.5"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
