[package]
name = "friendly-jigsaw"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
futures = "0.3.26"
gloo-net = "0.2.6"
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlFormElement", "FormData"]}
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
